<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".boxrequest.BoxRequestFragment">

    <ProgressBar
        android:id="@+id/fr_box_request_progress_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>

    <LinearLayout
        android:id="@+id/fr_box_request_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fr_box_request_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fr_box_request_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/fr_box_request_print_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:checked="false"
            android:text="@string/print_my_name_on_top_of_the_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:text="@string/size"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/fr_box_request_box_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:text="@string/color"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/fr_box_request_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/fr_box_request_request"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:layout_marginBottom="@dimen/two"
            android:text="@string/request_the_box"/>
    </LinearLayout>

</FrameLayout>